# giggle

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  go.mod  main.go  pyproject.toml  requirements.txt  setup.py  site.yaml  site_config.toml  site_config.yaml
docs/: configuration.md  user_guide.md
giggle/: __init__.py  __main__.py  builder.py  config.py  feeds.py  file_manager.py  index_builder.py  main.py  markdown.py  markdown_processor.py  pandoc_renderer.py  pandoc_runner.py  path_resolver.py  requirements.txt  site_config.py  sitemap.py  ssg.py  tag_generator.py  template.py  template_engine.py  types.py  utils.py
giggle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
giggle/cli/: __init__.py  commands.py
giggle/constants/: navbar.js  style.css  tag_page.jinja  vercel.json
giggle/constants/jinja_templates/: README.md  back_base.jinja  base.jinja  blog_index.jinja  blog_post.jinja  footer.jinja  nav.js.jinja  navbar.jinja  style.css.jinja  tag_index.jinja  tag_page.jinja  tags_index.jinja
giggle/constants/jinja_templates/game_black_green/: blog_post.jinja  style.css.jinja
giggle/core/: __init__.py  config.py  content.py  renderer.py  site.py  utils.py
giggle/templates/: about.html  archive.html  base.html  contact.html  index.html  main_index.html  page.html  tag.html
giggle/themes/: __init__.py
giggle/themes/basic/assets/css/: basic.css
giggle/themes/basic/assets/js/: basic.js
giggle/themes/basic/templates/: base.html  list.html  page.html  post.html
giggle/themes/dark/assets/: style.css
giggle/themes/default/assets/: style.css
giggle/themes/default/templates/: archive.html5  blog.html5  home.html5  listing.html5  page.html5  post.html5  tags.html5
giggle/themes/modern/assets/css/: modern.css  syntax.css
giggle/themes/modern/assets/js/: comments.js  dark-mode.js  modern.js
giggle/themes/modern/templates/: base.html  page.html  post.html  project.html  taxonomy.html
pages/: about.md  contact.md
sample_config/: sample_recipe.yaml  site_config.yaml  style_config.yaml  style_conifg.yaml
sample_config/sample_markdowns/: index.md  main.md  outreach.md
sample_config/sample_markdowns/blog/: blog-1.md  blog-2.md
sample_markdowns/: about.md  main.md  projects.md
sample_markdowns/blog/: first-post.md  second-post.md
site-src/: blogs.html  contact.html  index.html  outreach.html  style.css  tags.html
site-src/blog/: blog-1.html  blog-2.html
site-src/tags/: main.html  outreach.html  vibe.html
src/: go.mod  go.sum  html_generator.go  main.go  templates.go  utils.go
src/constants/: default_theme.yaml
test_src/: index.md
