[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "giggle"
version = "0.3.0"
description = "Static site generator with Pandoc backend"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Joyen Benitto", email = "joyen.benitto@gmail.com"}
]
keywords = ["static-site-generator", "pandoc", "markdown", "jinja2", "obsidian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
]
dependencies = [
    "click>=8.0.0",
    "Jinja2>=3.0.0",
    "PyYAML>=6.0.0",
    "python-frontmatter>=1.0.0",
    "livereload>=2.6.0",
    "watchdog>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/JoyenBenitto/giggle"

[project.scripts]
giggle = "giggle.main:main"

[tool.setuptools]
packages = ["giggle"]

[tool.setuptools.package-data]
giggle = [
    "constants/*.css",
    "constants/*.template",
    "constants/images/*",
]
