[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "giggle"
version = "1.0.0"
description = "Pandoc-powered static site generator for personal and academic sites"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Joyen Benitto", email = "joyen.benitto12@gmail.com"}
]
keywords = ["static-site-generator", "pandoc", "website", "markdown", "academic"]
dependencies = [
    "click>=8.0.0",
    "PyYAML>=6.0.0",
    "python-frontmatter>=1.0.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/JoyenBenitto/giggle"

[project.scripts]
giggle = "giggle.main:main"

[tool.setuptools]
packages = ["giggle", "giggle.themes"]

[tool.setuptools.package-data]
giggle = [
    "themes/*/templates/*.html5",
    "themes/*/assets/*.css",
    "themes/*/assets/*.js",
]
